--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -7,10 +7,9 @@ spring:
     password: OneShot
 
 mybatis:
-#  mapper-locations: classpath:mapper/*.xml
-  #???????resultType?????
-  type-aliases-package: com.ShengQin.OneShot.Entities
   configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #下划线转驼峰
     map-underscore-to-camel-case: true
+
+
 
