做了getRecommendPage，但还没测试

--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -11,5 +11,9 @@ mybatis:
     #下划线转驼峰
     map-underscore-to-camel-case: true
 
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
 
 
