完成获得推荐shot并通过测试

--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -13,7 +13,9 @@ mybatis:
 
 pagehelper:
   helperDialect: mysql
-  reasonable: true
+  reasonable: false
   supportMethodsArguments: true
+  params: count=countSql
+
 
 
