--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@ bin-release/
 *.ipa
 *.apk
 *.DS_Store
-.gitignore
+*.gitignore
+*.idea/workspace.xml
+/OneShot/.idea/workspace.xml
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
