--- a/OneShot/pom.xml
+++ b/OneShot/pom.xml
@@ -35,6 +35,23 @@
 			<artifactId>fastjson</artifactId>
 			<version>2.0.34</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>3.15.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
