--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ bin-release/
 *.DS_Store
 *.gitignore
 *.idea/workspace.xml
+OneShot/target/
+.gitignore
 
 # Exclude OneShot's workspace.xml file
 OneShot/.idea/workspace.xml
