--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,17 @@ bin-release/
 .settings/
 
 # Executables
+OneShot/.idea/workspace.xml
+OneShot/target/
 *.swf
 *.air
 *.ipa
 *.apk
 *.DS_Store
 *.gitignore
+*.class
 *.idea/workspace.xml
 OneShot/target/
-.gitignore
 *.idea/
 
 # Exclude OneShot's workspace.xml file
