准备好了发送邮件

--- a/OneShot/pom.xml
+++ b/OneShot/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>UserAgentUtils</artifactId>
 			<version>1.21</version>
 		</dependency>
+		<!-- redis 依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 
 		<!--		<dependency>-->
 <!--			<groupId>io.springfox</groupId>-->
