--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -5,6 +5,17 @@ spring:
     url: jdbc:mysql://localhost:3306/OneShot
     username: OneShot
     password: OneShot
+  mail:
+    # SMTP服务器
+    host: smtp.qq.com
+    # 发送验证码邮箱
+    username: 3508627758@qq.com
+    # 授权码
+    password: kygykfbwmlzfdbaj
+    # 编码
+    default-encoding: utf-8
+
+
 
 mybatis:
   configuration:
