完成redis存取，完成获取shot的同时获取是否点赞过

--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     url: jdbc:mysql://localhost:3306/OneShot
     username: OneShot
     password: OneShot
+  redis:
+    database: 1
+    host: localhost
+    port: 6379
+    #password: redis默认没密码
   mail:
     # SMTP服务器
     host: smtp.qq.com
