--- a/OneShot/src/main/resources/application.yml
+++ b/OneShot/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/OneShot
-    username: OneShot
-    password: OneShot
+    url: jdbc:mysql://localhost:3306/oneshot1
+    username: root
+    password: root
   mail:
     # SMTP服务器
     host: smtp.qq.com
@@ -14,7 +14,8 @@ spring:
     password: kygykfbwmlzfdbaj
     # 编码
     default-encoding: utf-8
-
+server:
+  port: 9090
 
 
 mybatis:
